# unsloth-llm-trainer

./: .gitignore  CLAUDE.md  Modelfile  README.md  is_cuda_available.py  main.py  pyproject.toml  test_bad_python.py  train_model.py
best-practices/: python-data-structures.md  python-error-handling.md  python-function-design.md  python-naming-conventions.md
typings/datasets/: arrow_dataset.pyi  arrow_reader.pyi  arrow_writer.pyi  builder.pyi  combine.pyi  config.pyi  data_files.pyi  dataset_dict.pyi  distributed.pyi  fingerprint.pyi  info.pyi  inspect.pyi  iterable_dataset.pyi  keyhash.pyi  load.pyi  splits.pyi  table.pyi
typings/datasets/download/: download_manager.pyi  streaming_download_manager.pyi
typings/datasets/features/: __init__.pyi  audio.pyi  features.pyi  pdf.pyi  video.pyi
typings/datasets/formatting/: formatting.pyi  torch_formatter.pyi
typings/datasets/packaged_modules/: __init__.pyi
typings/datasets/parallel/: parallel.pyi
typings/unsloth/: __init__.pyi  _auto_install.pyi  chat_templates.pyi  device_type.pyi  import_fixes.pyi  ollama_template_mappers.pyi  save.pyi  tokenizer_utils.pyi  trainer.pyi
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+54 files in other folders)
